      packages around until all apps using the old API have ben ported.
    + Add the +dfsg1 suffix to the version number since we have to remove
      a few non-free files from the source tarball.
  * debian/gbp.conf:
    + Update upstream branch name.
  * debian/watch:
    + Add dversionmangle rule to strip +dfsg1 from the package.
  * debian/control:
    + Remove all packages that use the old WebKit API, as well as the
      -common packages.
    + libjavascriptcoregtk-3.0-0 => libjavascriptcoregtk-4.0-18.
    + libwebkit2gtk-3.0-25 => libwebkit2gtk-4.0-37.
    + Split libwebkit2gtk-4.0-doc from the -dev package.
  * debian/jquery-1.9.1.js:
    + Provide uncompressed version of jquery to replace the compressed one
      that had to be removed from the original tarball.
  * debian/patches/enable_llint.patch,
    debian/patches/02_notebook_scroll.patch,
    debian/patches/atomic_build_fix.patch,
    debian/patches/fix-gtkdoc-error.patch,
    debian/patches/ftbfs-armhf.patch:
    + Remove.
  * debian/patches/dfg-jit.patch,
    debian/patches/local-label-string-hurd.patch,
    debian/patches/restore_sparc_code.patch,
    debian/patches/fix-textrel-x86.patch:
    + Refresh.
  * debian/patches/install-minibrowser.patch:
    + Rewrite to make it work with cmake.
  * debian/patches/change-libexec-dir.patch:
    + Install all auxiliary binaries in the same directory.
  * debian/source/lintian-overrides:
    + Remove.
  * debian/symbols.filter:
    + Remove.

 -- Alberto Garcia <berto@igalia.com>  Mon, 25 Aug 2014 10:58:41 +0300

webkitgtk (2.4.1-1) experimental; urgency=medium

  * New upstream release.
  * debian/patches/ftbfs-armhf.patch:
    + Fix FTBFS in armhf.
  * debian/patches/local-label-string-hurd.patch:
    + Fix FTBFS in hurd-i386.

 -- Alberto Garcia <berto@igalia.com>  Mon, 14 Apr 2014 20:22:51 +0000

webkitgtk (2.4.0-1) experimental; urgency=medium

  * New upstream stable release.
  * debian/patches/fix-textrel-x86.patch:
    + Remove TEXTREL tag in x86.